Avoid collapsed account description on start page

--- a/app/javascript/styles/mastodon/widgets.scss
+++ b/app/javascript/styles/mastodon/widgets.scss
@@ -100,6 +100,7 @@
     .account__display-name {
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
     }
   }
 
